# futur-sample

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/api/core/: file_manager.py  profiler.py  separator.py
backend/api/models/: schemas.py
backend/api/routes/: process.py
backend/tests/: test_file_manager.py  test_process_route.py  test_separator.py
