[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "demucs>=4.0.1",
    "fastapi>=0.136.3",
    "psutil>=7.2.2",
    "torchcodec>=0.14.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
